# reachy2-stack

./: .gitignore  .gitmodules  Dockerfile  README.md  arm_traj.npz  closing_arm_traj.npz  dummy_arm_traj.npz  final_base_odom.json  first_base_odom.json  mid_base_odom.json  pyproject.toml  reachy2.urdf  reposition_base_odom.json
.devcontainer/: devcontainer.json
Map generation/: tsdf_generation.py
advanced_mapping/: README.md  wavemap.py
config/: config.yaml  config_hloc.yaml
docs/: client_server_mapping.md
ext_server/: localization_server.py  wavemap_server.py
hloc_reachy/map/: camera_params.npz
reachy2_stack/base_module/: __init__.py  camera.py  camera_pose_buffer.py  localization_fusion.py  localization_loop.py  map_state.py  mapping.py  mapping_loop.py  odometry.py  robot_state.py  robot_state_loop.py  teleop.py  utils.py  visualization.py
reachy2_stack/control/: arm.py  base.py  gripper.py
reachy2_stack/core/: client.py  types.py
reachy2_stack/demos/: record_sensor.py  robotx.py
reachy2_stack/infra/: world_model.py
reachy2_stack/navigation/: __init__.py  navigation_loop.py
reachy2_stack/scripts/: build_hloc_database_from_leica.py
reachy2_stack/skills/: audio.py  drawer.py  dummy.py  expression.py  follow_arm_base.py  reachy_bridge.py  wave.py
reachy2_stack/tests/: demo_open_drawer.py  demo_open_drawer_option_b.py  demo_save_open_drawer.py  module_test.py  module_test_client_server.py  module_test_unified.py  record_rgbd_timestamps.py  test_arm_control.py  test_audio.py  test_base_control.py  test_base_control_world.py  test_connection.py  (+22 more)
(+21 files in other folders)
